fix( intro ): make first letter invisible

--- a/src/views/Intro/Intro.scss
+++ b/src/views/Intro/Intro.scss
@@ -14,7 +14,12 @@
     background-position-x: 0.25rem;
     background-position-y: 0.125rem;
 		background-repeat: no-repeat;
-		padding-left: 2rem;
+    display: inline-block;
+		padding-left: 0.75rem;
+
+    &:first-letter {
+      visibility: hidden;
+    }
 	}
 
   &__image {
@@ -43,6 +48,7 @@
     &__headline span {
       background-position-y: 0.25rem;
       background-size: 2.25rem;
+      padding-left: 0.5rem;
     }
 
     &__button {
@@ -56,7 +62,7 @@
       background-size: 3rem;
       background-position-x: 0.5rem;
       background-position-y: 0.125rem;
-      padding-left: 3rem;
+      padding-left: 1rem;
     }
   }
 }
